# magic-arena

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/private/: arena.cpp  character.cpp  factory.cpp  game.cpp  mage.cpp  priest.cpp  skill.cpp  team.cpp  warrior.cpp  weapon.cpp
src/public/: arena.hpp  character.hpp  effect.hpp  factory.hpp  game.hpp  mage.hpp  priest.hpp  skill.hpp  team.hpp  warrior.hpp  weapon.hpp
